[skip ci] Fixed README: added topic about gradle.properties